tests/fsharp/typecheck/sigs/neg06_b.bsl

neg06_b.fs(13,18,13,22): typecheck error FS0023: The member 'bmap' cannot be defined because the name 'bmap' clashes with the field 'bmap' in this type or module

neg06_b.fs(20,18,20,22): typecheck error FS0023: The member 'bmap' cannot be defined because the name 'bmap' clashes with the field 'bmap' in this type or module
